@@ -310,7 +310,6 @@
    libglib-g_get_language_names
    drd:ConflictingAccess
    fun:g_slice_free_chain_with_offset
-   fun:g_get_language_names
 }
 {
    libQtCore-4.0/4.1-Q_GLOBAL_STATIC-connectionList
@@ -325,7 +324,6 @@
    fun:_ZN14QReadWriteLock12lockForWriteEv
    fun:_ZN14QObjectPrivate11clearGuardsEP7QObject
    fun:_ZN7QObjectD2Ev
-   fun:_ZN20QEventDispatcherGlibD0Ev
 }
 {
    libQtCore-QObjectPrivate::clearGuards(QObject*)
