@@ -78,6 +78,7 @@ n-i-bz DRD - added "first observed at" information in error
 n-i-bz DRD - added new client request, VG_USERREQ__DRD_CLEAN_MEMORY.
 187048 DRD - the mutex attribute PTHREAD_PROCESS_SHARED is now
        interpreted correctly.
+188046 Removed a bashism from the configure script.
 
 
 
